src/Parser/Parser.cpp
#include "Parser.h"
#include "../Scanner/FloatToken.h"

Parser::Parser() {
    current_rhs_derivation_ = "<classDeclLst> <progBody>";
    derivations_.push_back(current_rhs_derivation_);
    enable_derivation_output_ = false;
    global_symbol_table_ = new SymbolTable();
    enable_double_pass_parse_ = true;
    code_generator_ = new CodeGenerator();
}

Parser::Parser(string derivation_output_path, string symbol_table_output_path,  string syntax_error_output_path, string semantic_error_output_path) {
    current_rhs_derivation_ = "<classDeclLst> <progBody>";
    derivations_.push_back(current_rhs_derivation_);
    enable_derivation_output_ = false;
    symbol_table_output_path_ = symbol_table_output_path;
    derivation_output_path_ = derivation_output_path;
    syntax_error_output_path_ = syntax_error_output_path;
    semantic_error_output_path_ = semantic_error_output_path;
    output_to_file_ = true;
    global_symbol_table_ = new SymbolTable();
    enable_double_pass_parse_ = true;
    code_generator_ = new CodeGenerator();
}

Parser::Parser(string derivation_output_path,  string syntax_error_output_path) {
    current_rhs_derivation_ = "<classDeclLst> <progBody>";
    derivations_.push_back(current_rhs_derivation_);
    enable_derivation_output_ = false;
    derivation_output_path_ = derivation_output_path;
    syntax_error_output_path_ = syntax_error_output_path;
    output_to_file_ = true;
    global_symbol_table_ = new SymbolTable();
    enable_double_pass_parse_ = true;
    code_generator_ = new CodeGenerator();
}

Parser::Parser(bool enable_derivation_output) {
    current_rhs_derivation_ = "<classDeclLst> <progBody>";
    derivations_.push_back(current_rhs_derivation_);
    enable_derivation_output_ = false;
    enable_derivation_output_ = enable_derivation_output;
    global_symbol_table_ = new SymbolTable();
    enable_double_pass_parse_ = true;
    code_generator_ = new CodeGenerator();
}

Parser::Parser(vector<Token*> tokens) {
    Parser();
    tokens_ = tokens;
    current_token_position_ = 0;
    enable_double_pass_parse_ = true;
    global_symbol_table_ = new SymbolTable();
    next_token();
    code_generator_ = new CodeGenerator();
}

SymbolRecord** create_new_symbol_record() {
    SymbolRecord** record = new SymbolRecord*;
    *record = new SymbolRecord();
    return record;
}

bool Parser::parse(vector<Token*> tokens) {
    if (enable_derivation_output_) {
        cout << current_rhs_derivation_ << endl;
    }
    current_token_position_ = 0;
    tokens_ = tokens;
    next_token();
    global_symbol_table_->second_pass_ = false;
    global_symbol_table_->code_generator_ = code_generator_;
    global_symbol_table_->code_generator_->second_pass_ = false;
    if (output_to_file_) {
        syntax_error_output_file_.open(syntax_error_output_path_);
        derivation_output_file_.open(derivation_output_path_);
        if (semantic_error_output_path_.size() > 0)
            semantic_error_output_file_.open(semantic_error_output_path_);
        if (symbol_table_output_path_.size() > 0)
            symbol_table_output_file_.open(symbol_table_output_path_);
    }

    bool result = prog();

    if (enable_double_pass_parse_)
    {
        current_token_position_ = 0;
        global_symbol_table_->set_second_pass(true);
        code_generator_->second_pass_ = true;
        next_token();
        prog();
    }

    semantic_errors_ = global_symbol_table_->errors_;
    if (output_to_file_) {

        if (semantic_error_output_file_.is_open()) {
            for (string error: semantic_errors_) {
                semantic_error_output_file_ << error + "\n";
            }
            semantic_error_output_file_.close();
        }

        if (symbol_table_output_file_.is_open()) {
            symbol_table_output_file_ << global_symbol_table_->print(false);
            symbol_table_output_file_.close();
        }

        syntax_error_output_file_.close();
        derivation_output_file_.close();
    }
    if (syntax_errors.size() == 0 && semantic_errors_.size() == 0) {
        ofstream program_out;
        program_out.open("program_out.m");
        code_generator_->code_generation_.push_back("stack");
        program_out << code_generator_->generate_variable_declaration();
        program_out << code_generator_->generate_code();

    }
    if (syntax_errors.size() > 1) {
        return false;
    }


    return result;
}


bool Parser::prog() {
    if (!skip_errors({"CLASS", "PROGRAM"}, {}, false))
        return false;
    if (lookahead_ == "CLASS" || lookahead_ == "PROGRAM") {
        if (classDeclLst() && global_symbol_table_->calculate_class_offsets() && progBody()) {
            return true;
        }

    }
    return false;
}

bool Parser::classDeclLst() {
    if (!skip_errors({"CLASS"}, {"PROGRAM"}, true))
        return false;
    if (lookahead_ == "CLASS") {
        form_derivation_string("<classDeclLst>", "<classDecl> <classDeclLst>");
        if (classDecl() && classDeclLst()) {
            return true;
        }
    } else if (lookahead_ == "PROGRAM") { // FOLLOW SET
        form_derivation_string("<classDeclLst>", "");
        return true;
    }
    return false;
}

bool Parser::classDecl() {
    if (!skip_errors({"CLASS"}, {"PROGRAM"}, false))
        return false;
    if (lookahead_ == "CLASS") {
        form_derivation_string("<classDecl>", "class id { <classBody> } ;");

        if (match("CLASS") && match("ID") && global_symbol_table_->create_class_entry_and_table("class", "", get_last_token().lexeme_) && match("OPENCURL") && classBody() && match("CLOSECURL") && match("DELI")) {
            return true;
        }
    }
    return false;
}

bool Parser::classBody() {
    if (!skip_errors({"INT", "ID", "FLOAT"}, {"CLOSECURL"}, true))
        return false;
    if (is_lookahead_a_type()) {
        form_derivation_string("<classBody>", "<classInDecl> <classBody>");
        if (classInDecl() && classBody()) {
            return true;
        }
    } else if (lookahead_ == "CLOSECURL") { // FOLLOW SET
        form_derivation_string("<classBody>", "");
        return true;
    }
    return false;
}

bool Parser::classInDecl() {
    if (!skip_errors({"INT", "ID", "FLOAT"}, {"INT", "ID", "FLOAT", "CLOSECURL"}, false))
        return false;
    if (is_lookahead_a_type()) {
        form_derivation_string("<classInDecl>", "<type> id <postTypeId>");
        SymbolRecord** record = create_new_symbol_record();
       // (*record)->symbol_table_->parent_symbol_table_ = global_symbol_table_;
        if (type(*record) && match("ID", {"OPENBRA", "OPENPARA", "DELI", "CLOSECURL"}) && (*record)->set_name(get_last_token().lexeme_) && postTypeId(record)) {
            return true;
        }
    }
    return false;
}

bool Parser::postTypeId(SymbolRecord** record) {
    if (!skip_errors({"OPENBRA", "OPENPARA", "DELI"}, {"INT", "ID", "FLOAT", "CLOSECURL"}, false))
        return false;
    if (lookahead_ == "OPENBRA") {
        form_derivation_string("<postTypeId>", "<arraySize> ;");
        if (arraySize(*record) && match("DELI") && global_symbol_table_->current_symbol_record_->symbol_table_->create_variable_entry(record)) {
            return true;
        }
    } else if (lookahead_ == "OPENPARA") {
        form_derivation_string("<postTypeId>", "( <fParams> ) <funcBody> ;");
        if (global_symbol_table_->current_symbol_record_->symbol_table_->create_function_class_entry_and_function_table(record) && match("OPENPARA") && fParams(*record) && match("CLOSEPARA") && funcBody(*record) && match("DELI")) {
            return true;
        }
    } else if (lookahead_ == "DELI") {
        form_derivation_string("<postTypeId>", ";");
        if (match("DELI") && global_symbol_table_->current_symbol_record_->symbol_table_->create_variable_entry(record))
            return true;
    }

        // panic mode, missing semi colon
    form_derivation_string("<postTypeId>", "<errorMissingSemiColon>");
    return true;

    //return false;
}

bool Parser::progBody() {
    if (!skip_errors({"PROGRAM"}, {"END"}, false))
        return false;
    if (lookahead_ == "PROGRAM") {
        form_derivation_string("<progBody>", "program <funcBody> ; <funcDefLst>");
        if (match("PROGRAM") && global_symbol_table_->create_program_entry_and_table() && funcBody(global_symbol_table_->current_symbol_record_) && code_generator_->create_program_halt(global_symbol_table_->second_pass_) && match("DELI") && funcDefLst())
            return true;
    }
    return false;
}

bool Parser::funcHead(SymbolRecord** record) {
    if (!skip_errors({"INT", "ID", "FLOAT"}, {"OPENCURL"}, false))
        return false;
    if (is_lookahead_a_type()) {
        form_derivation_string("<funcHead>", "<type> id ( <fParams> )");
        if (type(*record) && match("ID") && (*record)->set_name(get_last_token().lexeme_) && global_symbol_table_->create_function_entry_and_table(record) && match("OPENPARA") && fParams(*record) && match("CLOSEPARA"))
            return true;
    }
    return false;
}

bool Parser::funcDefLst() {
    if (!skip_errors({"INT", "ID", "FLOAT"}, {"END"}, true))
        return false;
    if (is_lookahead_a_type()) {
        form_derivation_string("<funcDefLst>", "<funcDef> <funcDefLst>");
        if (funcDef() && funcDefLst())
            return true;
    } else if (lookahead_ == "END") {
        form_derivation_string("<funcDefLst>", "");
        return true;
    }
    return false;
}

bool Parser::funcDef() {
    if (!skip_errors({"INT", "ID", "FLOAT"}, {"INT", "ID", "FLOAT", "END"}, false))
        return false;
    if (is_lookahead_a_type()) {
        form_derivation_string("<funcDef>", "<funcHead> <funcBody> ;");
        SymbolRecord** record = create_new_symbol_record();
        if (funcHead(record) && funcBody(*record) && match("DELI")) {
            return true;
        }
    }
    return false;
}

bool Parser::funcBody(SymbolRecord* func_record) {
    if (!skip_errors({"OPENCURL"}, {"DELI"}, false))
        return false;
    if (lookahead_ == "OPENCURL") {
        form_derivation_string("<funcBody>", "{ <funcInBodyLst> }");
        if (match("OPENCURL") && funcInBodyLst(func_record) && match("CLOSECURL")) {
            return true;
        }
    }
    return false;
}


bool Parser::funcInBodyLst(SymbolRecord* func_record) {
    if (!skip_errors({"INT", "ID", "FLOAT", "IF", "FOR", "GET", "PUT", "RETURN"}, {"CLOSECURL"}, true))
        return false;
    if (is_lookahead_a_type() || is_lookahead_a_statement()) {
        form_derivation_string("<funcInBodyLst>", "<funcInBody> <funcInBodyLst>");
        if (funcInBody(func_record) && funcInBodyLst(func_record)) {
            return true;
        }
    } else if (lookahead_ == "CLOSECURL") { // Follow set
        form_derivation_string("<funcInBodyLst>", "");
        return true;
    }
    return false;
}

bool Parser::funcInBody(SymbolRecord* func_record) {
    if (!skip_errors({"INT", "ID", "FLOAT", "IF", "FOR", "GET", "PUT", "RETURN"},
                     {"INT", "ID", "FLOAT", "IF", "FOR", "GET", "PUT", "RETURN", "CLOSECURL"}, false))
        return false;
    if (lookahead_ == "ID") {
        form_derivation_string("<funcInBody>", "id <varOrStat>");
        SymbolRecord** local_record = create_new_symbol_record();
        if (match("ID") && (*local_record)->set_type(get_last_token().lexeme_) && varOrStat(func_record, local_record)) {
            return true;
        }
    } else if (is_lookahead_a_statement()) {
        form_derivation_string("<funcInBody>", "<statementRes>");
        if (statementRes(func_record)) {
            return true;
        }
    } else if (lookahead_ == "INT" || lookahead_ == "FLOAT") {
        form_derivation_string("<funcInBody>", "<numType> id <arraySize> ;");
        SymbolRecord** local_record = create_new_symbol_record();
        if (numType(*local_record) && match("ID", {"OPENBRA", "DELI"}) && (*local_record)->set_name(get_last_token().lexeme_)) {
            arraySize(*local_record);
            func_record->symbol_table_->create_variable_entry(local_record);
                if(match("DELI", {"INT", "ID", "FLOAT", "IF", "FOR", "GET", "PUT", "RETURN"}))
                    return true;
        }
    }
    return false;
}

bool Parser::varOrStat(SymbolRecord* func_record, SymbolRecord** record) {
    if (!skip_errors({"ID", "OPENBRA", "EQUAL", "DOT"},
                     {"INT", "ID", "FLOAT", "IF", "FOR", "GET", "PUT", "RETURN", "CLOSECURL"}, false))
        return false;
    if (lookahead_ == "ID") {
        form_derivation_string("<varOrStat>", "id <arraySize> ;");
        if (match("ID") && (*record)->set_name(get_last_token().lexeme_) && arraySize(*record)
            && match("DELI", {"INT", "ID", "FLOAT", "IF", "FOR", "GET", "PUT", "RETURN", "CLOSECURL"} )
            && func_record->symbol_table_->create_variable_entry(record)) {
            return true;
        }
    } else if (lookahead_ == "OPENBRA" || lookahead_ == "EQUAL" || lookahead_ == "DOT") {
        form_derivation_string("<varOrStat>", "<indiceLst> <idnest> <assignOp> <expr> ;");
        (*record)->set_name((*record)->type_);
        ExpressionTree* tree = new ExpressionTree();
        func_record->symbol_table_->load_record_details(*record);
        if (indiceLst(func_record, *record) && idnest(func_record, *record) && assignOp() && expr(func_record, tree) && func_record->symbol_table_->check_expression_tree_for_correct_type(*record, tree) && match("DELI", {"INT", "ID", "FLOAT", "IF", "FOR", "GET", "PUT", "RETURN", "CLOSECURL"}, ";", "<missingSemiColon>")) {
            return true;
        }
    }
    return false;
}

bool Parser::statementLst(SymbolRecord* func_record) {
    if (!skip_errors({"INT", "ID", "FLOAT", "IF", "FOR", "GET", "PUT", "RETURN"}, {"CLOSECURL"}, true))
        return false;
    if (lookahead_ == "ID" || is_lookahead_a_statement()) {
        form_derivation_string("<statementLst>", "<statement> <statementLst>");
        if (statement(func_record) && statementLst(func_record))
            return true;
    } else if (lookahead_ == "CLOSECURL") {
        form_derivation_string("<statementLst>", "");
        return true;
    }
}

bool Parser::statement(SymbolRecord* func_record) {
    if (!skip_errors({"ID", "IF", "FOR", "GET", "PUT", "RETURN"},
                     {"ID", "IF", "FOR", "GET", "PUT", "RETURN", "ELSE", "DELI", "CLOSECURL"}, false))
        return false;
    if (lookahead_ == "ID") {
        form_derivation_string("<statement>", "<assignStat> ;");
        SymbolRecord* record = new SymbolRecord();
        if (assignStat(func_record, record) && match("DELI"))
            return true;
    } else if (is_lookahead_a_statement()) {
        form_derivation_string("<statement>", "<statementRes>");
        if (statementRes(func_record))
            return true;
    }
    return false;
}

bool Parser::statementRes(SymbolRecord* func_record) {
    if (!skip_errors({"IF", "FOR", "GET", "PUT", "RETURN"},
                     {"ID", "INT", "FLOAT", "IF", "FOR", "GET", "PUT", "RETURN", "ELSE", "DELI", "CLOSECURL",}, false))
        return false;
    SymbolRecord** local_record = create_new_symbol_record();
    (*local_record)->symbol_table_->second_pass_ = global_symbol_table_->second_pass_;
    ExpressionTree* tree = new ExpressionTree();
    if (lookahead_ == "IF") {
        form_derivation_string("<statementRes>", "if ( <expr> ) then <statThenBlock>");
        if (match("IF") && match("OPENPARA") && expr(func_record, tree) && func_record->symbol_table_->check_expression_is_valid(tree) && code_generator_->create_if() && match("CLOSEPARA") && match("THEN") && statThenBlock(func_record) && code_generator_->create_if_end()) {
            return true;
        }
    } else if (lookahead_ == "FOR") {
        form_derivation_string("<statementRes>", "for ( <type> id <assignOp> <expr> ; <relExpr> ; <assignStat> ) <statBlock>");
        SymbolRecord* assign_record = new SymbolRecord(global_symbol_table_->second_pass_);
        if (match("FOR") && match("OPENPARA") && type(*local_record) && match("ID") && (*local_record)->set_name(get_last_token().lexeme_) &&
                func_record->symbol_table_->create_variable_entry(local_record) && assignOp() && expr(func_record, tree) && match("DELI") &&
                func_record->symbol_table_->check_expression_tree_for_correct_type(*local_record, tree) && code_generator_->create_for_loop() &&
            relExpr(func_record) && code_generator_->create_for_relation_loop() && match("DELI") && assignStat(func_record, assign_record) && match("CLOSEPARA") && statBlock(func_record) && code_generator_->create_end_for_loop()) {
            return true;
        }
    } else if (lookahead_ == "GET") {
        form_derivation_string("<statementRes>", "get ( <variable> ) ;");
        if (match("GET") && match("OPENPARA") && variable(func_record, *local_record) && match("CLOSEPARA") && match("DELI")) {
            return true;
        }
    } else if (lookahead_ == "PUT") {
        form_derivation_string("<statementRes>", "put ( <expr> ) ;");
        if (match("PUT") && match("OPENPARA") && expr(func_record, tree) && func_record->symbol_table_->check_expression_is_valid(tree) && code_generator_->create_put_code() && match("CLOSEPARA") && match("DELI")) {
            return true;
        }
    } else if (lookahead_ == "RETURN") {
        form_derivation_string("<statementRes>", "return ( <expr> ) ;");
        if (match("RETURN") && match("OPENPARA") && expr(func_record, tree) && func_record->symbol_table_->check_if_return_type_is_correct_type(func_record, tree) && match("CLOSEPARA") && code_generator_->create_func_return_code(func_record) && match("DELI")) {
            return true;
        }
    }
    return false;
}

bool Parser::statIfElseBlock(SymbolRecord* func_record) {
    if (!skip_errors({"ELSE", "DELI"}, {"DELI", "ELSE", "ID", "IF", "FOR", "GET", "PUT", "RETURN"}, false))
        return false;
    if (lookahead_ == "ELSE") {
        form_derivation_string("<statIfElseBlock>", "else <statBlock>");
        if (code_generator_->create_if_else() && match("ELSE") && statBlock(func_record))
            return true;
    } else if (lookahead_ == "DELI") {
        form_derivation_string("<statIfElseBlock>", "");
        if (match("DELI") && code_generator_->create_if_else())
            return true;
    }
    return false;
}

bool Parser::statElseBlock(SymbolRecord* func_record) {
    if (!skip_errors({"ELSE", "DELI"}, {"DELI", "ELSE", "ID", "IF", "FOR", "GET", "PUT", "RETURN"}, false))
        return false;
    if (lookahead_ == "ELSE") {
        form_derivation_string("<statElseBlock>", "else <statBlock>");
        if (code_generator_->create_if_else() && match("ELSE") && statBlock(func_record))
            return true;
    } else if (lookahead_ == "DELI" || lookahead_ == "ELSE" || lookahead_ == "ID" || lookahead_ == "IF" ||
               lookahead_ == "FOR" || lookahead_ == "GET" || lookahead_ == "PUT" || lookahead_ == "RETURN") {
        form_derivation_string("<statElseBlock>", "");
        if (match("DELI") && code_generator_->create_if_else())
            return true;
    }
    return true;
}

bool Parser::assignStat(SymbolRecord* func_record, SymbolRecord* record) {
    if (!skip_errors({"ID"}, {"CLOSEPARA", "DELI"}, false))
        return false;
    if (lookahead_ == "ID") {
        form_derivation_string("<assignStat>", "<variable> <assignOp> <expr>");
        ExpressionTree* tree = new ExpressionTree();
        if (variable(func_record, record) && assignOp() && expr(func_record, tree) && func_record->symbol_table_->check_expression_tree_for_correct_type(record, tree))
            return true;
    }
    return false;
}

bool Parser::statBlock(SymbolRecord* func_record) {
    if (!skip_errors({"OPENCURL", "ID", "IF", "FOR", "GET", "PUT", "RETURN"}, {"ELSE", "DELI"}, true))
        return false;
    if (lookahead_ == "OPENCURL") {
        form_derivation_string("<statBlock>", "{ <statementLst> } ;");
        if (match("OPENCURL") && statementLst(func_record) && match("CLOSECURL") && match("DELI"))
            return true;
    } else if (lookahead_ == "ID" || is_lookahead_a_statement()) {
        form_derivation_string("<statBlock>", "<statement>");
        if (statement(func_record))
            return true;
    } else if (lookahead_ == "ELSE" || lookahead_ == "DELI") { // Follow set
        form_derivation_string("<statBlock>", "");
        return true;
    }
    return false;
}

bool Parser::statThenBlock(SymbolRecord* func_record) {
    if (!skip_errors({"OPENCURL", "ID", "IF", "FOR", "GET", "PUT", "RETURN"}, {"ELSE", "DELI"}, true))
        return false;
    if (lookahead_ == "OPENCURL") {
        form_derivation_string("<statThenBlock>", "{ <statementLst> } <statIfElseBlock>");
        if (match("OPENCURL") && statementLst(func_record) && match("CLOSECURL") && statIfElseBlock(func_record))
            return true;
    } else if (lookahead_ == "OPENCURL" || lookahead_ == "ID" || is_lookahead_a_statement()) {
        form_derivation_string("<statThenBlock>", "<statement> <statElseBlock>");
        if (statement(func_record) && statElseBlock(func_record))
            return true;
    }
    return false;
}

bool Parser::expr(SymbolRecord* func_record, ExpressionTree* abstract_expression_tree) {
    if (!skip_errors({"ID", "INUM", "FNUM", "OPENPARA", "NOT", "ADD", "SUB"}, {"COM", "CLOSEPARA", "DELI"}, false))
        return false;
    if (is_lookahead_a_value() || lookahead_ == "OPENPARA" || lookahead_ == "NOT" || lookahead_ == "ADD" || lookahead_ == "SUB") {
        form_derivation_string("<expr>", "<arithExpr> <relOrAri>");
        if (arithExpr(func_record, abstract_expression_tree) && relOrAri(func_record, abstract_expression_tree)) {
            return true;
        }
    }
    return false;
}

bool Parser::relOrAri(SymbolRecord* func_record, ExpressionTree* abstract_expression_tree) {
    if (!skip_errors({"EQUIV", "NOTEQ", "LT", "GT", "LTEQ", "GTEQ", "ADD", "SUB", "OR"}, {"COM", "CLOSEPARA", "DELI"},
                     true))
        return false;
    if (lookahead_ == "EQUIV" || lookahead_ == "NOTEQ" || lookahead_ == "LT" || lookahead_ == "GT" ||
        lookahead_ == "LTEQ" || lookahead_ == "GTEQ") {
        form_derivation_string("<relOrAri>", "<relOp> <arithExpr>");
        SymbolRecord* operation_record = new SymbolRecord();
        ExpressionTree* right_expression_tree = new ExpressionTree();
        if (relOp(operation_record) && arithExpr(func_record, right_expression_tree) && abstract_expression_tree->split_tree_with_rel_operator(right_expression_tree, operation_record))
            return true;
    } else if (lookahead_ == "ADD" || lookahead_ == "SUB" || lookahead_ == "OR") {
        form_derivation_string("<relOrAri>", "<arithExprD>");
        ExpressionTree* right_expression_tree = new ExpressionTree();
        if (arithExprD(func_record, right_expression_tree))
            return true;
    } else if (lookahead_ == "COM" || lookahead_ == "CLOSEPARA" || lookahead_ == "DELI") {
        form_derivation_string("<relOrAri>", "");
        return true;
    }

    return false;
}


bool Parser::relExpr(SymbolRecord* func_record) {
    if (!skip_errors({"OPENPARA", "ID", "INUM", "FNUM", "NOT", "ADD", "SUB"}, {"DELI"}, false))
        return false;
    if (is_lookahead_a_value() || lookahead_ == "OPENPARA" || lookahead_ == "NOT" || lookahead_ == "ADD" ||
        lookahead_ == "SUB") {
        form_derivation_string("<relExpr>", "<arithExpr> <relOp> <arithExpr>");
        SymbolRecord* operation_record = new SymbolRecord();
        ExpressionTree* left_abstract_expression_tree = new ExpressionTree();
        ExpressionTree* right_abstract_expression_tree = new ExpressionTree();
        if (arithExpr(func_record, left_abstract_expression_tree) && relOp(operation_record) && arithExpr(func_record, right_abstract_expression_tree)) {
            left_abstract_expression_tree->split_tree_with_rel_operator(right_abstract_expression_tree, operation_record);
            func_record->symbol_table_->check_expression_is_valid(left_abstract_expression_tree);
            return true;
        }

    }
    return false;

}

bool Parser::arithExpr(SymbolRecord* func_record, ExpressionTree* abstract_expression_tree) {
    if (!skip_errors({"OPENPARA", "ID", "INUM", "FNUM", "NOT", "ADD", "SUB"},
                     {"CLOSEBRA", "CLOSEPARA", "EQUIV", "NOTEQ", "LT", "GT", "LTEQ", "GTEQ", "DELI", "COM"}, false))
        return false;
    if (is_lookahead_a_value() || lookahead_ == "OPENPARA" || lookahead_ == "NOT" || lookahead_ == "ADD" ||
        lookahead_ == "SUB") {
        form_derivation_string("<arithExpr>", "<term> <arithExprD>");
        if (term(func_record, abstract_expression_tree) && arithExprD(func_record, abstract_expression_tree))
            return true;
    }
    return false;
}

bool Parser::arithExprD(SymbolRecord* func_record, ExpressionTree* abstract_expression_tree) {
    if (!skip_errors({"ADD", "SUB", "OR"},
                     {"CLOSEBRA", "CLOSEPARA", "EQUIV", "NOTEQ", "LT", "GT", "LTEQ", "GTEQ", "DELI", "COM"}, true))
        return false;
    if (lookahead_ == "ADD" || lookahead_ == "SUB" || lookahead_ == "OR") {
        form_derivation_string("<arithExprD>", "<addOp> <term> <arithExprD>");
        SymbolRecord* operation_record = new SymbolRecord();
        if (addOp(operation_record) && abstract_expression_tree->add_new_record(operation_record) && term(func_record, abstract_expression_tree) && arithExprD(func_record, abstract_expression_tree))
            return true;
    } else if (check_if_lookahead_is_in_set(
            {"EQUIV", "NOTEQ", "LT", "GT", "LTEQ", "GTEQ", "CLOSEBRA", "CLOSEPARA", "DELI", "COM"})) { // follow set
        form_derivation_string("<arithExprD>", "");
        return true;
    }
    return false;
}

bool Parser::sign(SymbolRecord* record) {
    if (!skip_errors({"ADD", "SUB"},
                     {"CLOSEBRA", "CLOSEPARA", "EQUIV", "NOTEQ", "LT", "GT", "LTEQ", "GTEQ", "DELI", "COM"}, false))
        return false;
    if (lookahead_ == "ADD") {
        form_derivation_string("<sign>", "+");
        record->single_operators_before_.push_back("ADD");
        if (match("ADD"))
            return true;
    } else if (lookahead_ == "SUB") {
        form_derivation_string("<sign>", "-");
        record->single_operators_before_.push_back("SUB");
        if (match("SUB"))
            return true;
    }
    return false;
}

bool Parser::term(SymbolRecord* func_record, ExpressionTree* abstract_expression_tree) {
    if (!skip_errors({"OPENPARA", "ID", "INUM", "FNUM", "NOT", "ADD", "SUB"},
                     {"ADD", "SUB", "OR", "CLOSEBRA", "CLOSEPARA", "EQUIV", "NOTEQ", "LT", "GT", "LTEQ", "GTEQ", "DELI",
                      "COM"}, false))
        return false;
    if (is_lookahead_a_value() || lookahead_ == "OPENPARA" || lookahead_ == "NOT" || lookahead_ == "ADD" ||
        lookahead_ == "SUB") {
        form_derivation_string("<term>", "<factor> <termD>");
        if (factor(func_record, NULL, abstract_expression_tree) && termD(func_record, abstract_expression_tree)) {
            return true;
        }
    }
    return false;
}

bool Parser::termD(SymbolRecord* func_record, ExpressionTree* abstract_expression_tree) {
    if (!skip_errors({"MULT", "DASH", "AND"},
                     {"ADD", "SUB", "OR", "CLOSEBRA", "CLOSEPARA", "EQUIV", "NOTEQ", "LT", "GT", "LTEQ", "GTEQ", "DELI",
                      "COM"}, true))
        return false;
    if (lookahead_ == "MULT" || lookahead_ == "DASH" || lookahead_ == "AND") {
        form_derivation_string("<termD>", "<multOp> <factor> <termD>");
        SymbolRecord* operation_record = new SymbolRecord();
        if (multOp(operation_record) && abstract_expression_tree->add_new_record(operation_record) && factor(func_record, NULL, abstract_expression_tree) && termD(func_record, abstract_expression_tree))
            return true;
    } else if (check_if_lookahead_is_in_set(
            {"ADD", "SUB", "OR", "EQUIV", "NOTEQ", "LT", "GT", "LTEQ", "GTEQ", "CLOSEBRA", "CLOSEPARA", "DELI", "COM",
             "DOT"})) { // follow set
        form_derivation_string("<termD>", "");
        return true;
    }
    return false;
}

bool Parser::factor(SymbolRecord* func_record, SymbolRecord* record, ExpressionTree* abstract_expression_tree) {
    if (!skip_errors({"OPENPARA", "ID", "INUM", "FNUM", "NOT", "ADD", "SUB"},
                     {"MULT", "DASH", "AND", "ADD", "SUB", "OR", "CLOSEBRA", "CLOSEPARA", "EQUIV", "NOTEQ", "LT", "GT",
                      "LTEQ", "GTEQ", "DELI", "COM"}, false))
        return false;
    if (record == NULL)
        record = new SymbolRecord();
    if (lookahead_ == "ID") {
        form_derivation_string("<factor>", "id <factorVarOrFunc>");
        record->kind_ = "variable";
        record->structure_ = "class";
        if (match("ID") && record->set_name(get_last_token().lexeme_) && factorVarOrFunc(func_record, record) && abstract_expression_tree->add_new_record(record))
            return true;
    } else if (lookahead_ == "INUM" || lookahead_ == "FNUM") {
        form_derivation_string("<factor>", "<num>");
        if (num(record) && abstract_expression_tree->add_new_record(record))
            return true;
    } else if (lookahead_ == "OPENPARA") {
        form_derivation_string("<factor>", "( <arithExpr> )");
        ExpressionTree* nested_tree = abstract_expression_tree;
        if (abstract_expression_tree->root_node_->record_ != NULL)
            nested_tree = new ExpressionTree();
        if (match("OPENPARA") && arithExpr(func_record, nested_tree) && match("CLOSEPARA"))
            if (abstract_expression_tree != nested_tree)
                abstract_expression_tree->add_bracket_tree(nested_tree);
            return true;
    } else if (lookahead_ == "NOT") {
        form_derivation_string("<factor>", "not <factor>");
        record->single_operators_before_.push_back("NOT");
        if (match("NOT") && factor(func_record, record, abstract_expression_tree) && abstract_expression_tree->add_new_record(record))
            return true;
    } else if (lookahead_ == "ADD" || lookahead_ == "SUB") {
        form_derivation_string("<factor>", "<sign> <factor>");
        record->single_operators_before_.push_back(lookahead_);
        if (sign(record) && factor(func_record, record, abstract_expression_tree) && abstract_expression_tree->add_new_record(record))
            return true;
    }
    return false;
}
